Some classes updated